fix costructor - face component

--- a/src/components/constructorFace/ConstructorFace.scss
+++ b/src/components/constructorFace/ConstructorFace.scss
@@ -40,6 +40,10 @@
       top: 197px;
       left: 697px;
     }
+    &.chin {
+      top: 360px;
+      left: 155px;
+    }
 
     .svg-line {
     }
