--- a/src/components/about_operation/About_operation.scss
+++ b/src/components/about_operation/About_operation.scss
@@ -8,6 +8,14 @@
         border-left: 1px solid gray;
         font-family: Raleway;
     }
+    &__parents2 {
+        position: absolute;
+        left: 850px;
+        top: 300px;
+        padding-left: 32px;
+        border-left: 1px solid gray;
+        font-family: Raleway;
+    }
     &__header{
         padding-right: 32px;
         display: flex;
@@ -15,6 +23,13 @@
     }
 
     &__head {
+        color: #3066BE;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    &__head2 {
         color: #3066BE;
         font-size: 36px;
         font-style: normal;
@@ -44,11 +59,35 @@
         opacity: 0.5;
     }
 
-    &__button {
+    &__parents-buttons {
         display: flex;
         flex-direction: column;
         gap: 10px;
-        width: 200px;
+    }
+    &__button{
+        display: flex;
+        min-height: 40px;
+        width: 420px;
+        padding: 0px 16px;
+        flex-direction: column;
+        justify-content: center;
+        //align-items: center;
+        gap: 4px;
+        border-radius: 8px;
+        border: 2px solid #0041ab;
+        cursor: pointer;
+        background: none;
+        transition: all 0.2s ease-in-out;
+
+        /* Raleway 24px,regular (400) */
+        font-family: Raleway;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+    &__button:hover{
+        background-color: #3066be20;
     }
 
     &__face {
@@ -66,5 +105,38 @@
         font-weight: 700;
         line-height: normal;
     }
+    &__not_face {
+        position: absolute;
+        left: 850px;
+        top: 300px;
+        padding-left: 32px;
+        font-family: Raleway;
+        color: #3066BE;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    &__not_face_img{
+         height: 350px;
+    }
+
+    &__hint{
+        display: none;
+    }
+    &__button:hover &__hint{
+        display:inline-block;
+    }
+    // &__hint#__first{
+    //     top:10px;
+    // }
+    // &__hint#__second{
+    //     top:25px;
+    // }
+    // &__hint#__third{
+    //     top:35px;
+    // }
+    
+
 
 }
