--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,6 +8,7 @@
     height: 80px;
     background-color: rgba(0, 0, 0, 0);
     padding: 0 7%;
+    user-select: none;
 
 
 
@@ -28,6 +29,7 @@
 
 
         li {
+            cursor: pointer;
             list-style: none;
             width: 100%;
             height: 100%;
@@ -35,6 +37,16 @@
             align-items: center;
             flex-wrap: nowrap;
             justify-content: space-around;
+            &.active{
+            .services{
+                a{
+                    color: #fff;
+                p{
+                    color: #000000;
+                }
+            }
+        }
+        }
         }
 
         a {
@@ -43,7 +55,6 @@
             font-family: 'Raleway';
             font-size: 26px;
             line-height: 30px;
-            text-align: center;
             letter-spacing: 0em;
             font-weight: 400;
         }
@@ -56,14 +67,13 @@
             left: 0;
             z-index: 10;
             background-color: #fff;
-
+            box-shadow: 0px 0px 120px 0px rgba(0, 0, 0, 0.20);
             border-radius: 0% 0% 50px 50px;
             padding: 10px;
             display: flex;
-            flex-direction: row;
-            align-items: flex-start;
 
             h2 {
+                color: #000000;
                 font-family: Raleway;
                 font-size: 32px;
                 font-weight: 700;
@@ -91,57 +101,51 @@
                 line-height: 28px;
                 letter-spacing: 0em;
                 text-align: left;
-                display: flex;
-                justify-content: space-between;
+                display: grid;
+                grid-template-columns: 1fr auto;
+                align-items: center;
                 border-radius: 10px;
-
-
+                
                 &:hover {
                     background-color: rgba(242, 241, 240, 1);
-                }
-
-                p {
-                    color: #000000;
-                    font-family: Raleway;
-                    font-size: 100px;
-                    font-weight: 400;
-                    line-height: 28px;
-                    letter-spacing: 0em;
-                    text-align: left;
-
                 }
             }
 
             .services-list {
                 margin-left: 3%;
-
-                &__li {
-                    display: grid;
-                    grid-template-columns: 1fr 1fr 1fr;
-                    grid-template-rows: 15px 15px;
-                    gap: 30px;
+                &__ul{
+                    width: 100% ;
+                    display: flex;
+                    flex-wrap: wrap;
                 }
-
-                &__li:first-child {
-                    a {
-                        p {
-                            font-weight: 800;
+                &__li {
+                    width: 400px;
+                    display: block;
+                    margin: 10px;
+                }
+            }
+        }
+                .sub-menu{
+                    &_li{
+                        display: block;
+                        color: aqua;
+                        margin: 10px 0px 0px 0px ;
+                        a{
+                            font-size: 22px;
                         }
                     }
                 }
-
-            }
-        }
-
         .active {
+            width: 100%;
+            height: 100%;
+            top: 50%;
             background: rgba(48, 102, 190, 1);
             border-radius: 0px 0px 15px 15px;
-
-            a {
-                color: white;
-
+            color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
                 p {
-                    color: #000000;
                     font-size: 10px;
                     font-family: Raleway;
                     font-size: 24px;
@@ -150,16 +154,12 @@
                     letter-spacing: 0em;
                     text-align: left;
                 }
-            }
-
-            &:nth-child(8) {
-                color: aqua;
-            }
         }
     }
 
     &__button-item {
         user-select: none;
+        text-align: center;
         width: 148px;
         height: 50px;
         background: rgba(48, 102, 190, 1);
@@ -167,11 +167,10 @@
         border-radius: 8px;
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
         
-
         p {
             font-size: 20px;
             font-family: 'Raleway';
-            margin: 10px 0;
+            margin: 9% 0;
             font-weight: 400;
         }
     }
