--- a/src/components/personalAccount/servicesInfo/ServicesInfo.scss
+++ b/src/components/personalAccount/servicesInfo/ServicesInfo.scss
@@ -9,40 +9,8 @@
   &__footer {
     display: flex;
     flex-direction: row;
-    // justify-content: space-between;
+    justify-content: flex-end;
     gap: 16px;
-    &-item {
-      display: flex;
-      &-select select {
-        background: none;
-        border: 2px solid rgba(48, 102, 190, 0.5);
-        border-radius: 8px;
-        padding: 8px;
-        transition: all 0.2s ease-in-out;
-      }
-      &-input input {
-        opacity: 0.5;
-        background: none;
-        border: 2px solid rgba(48, 102, 190, 0.5);
-        border-radius: 8px;
-        padding: 8px;
-        transition: all 0.2s ease-in-out;
-        &:hover {
-          background: rgba(48, 102, 190, 0.02);
-          border: 2px solid rgba(48, 102, 190, 0.8);
-          opacity: 1;
-        }
-        &:focus {
-          border: 2px solid rgba(48, 102, 190, 1);
-          background: rgba(48, 102, 190, 0.05);
-          opacity: 1;
-        }
-        &:active {
-          border: 2px solid rgba(48, 102, 190, 1);
-          opacity: 1;
-        }
-      }
-    }
 
     &-gap {
       display: flex;
@@ -58,11 +26,6 @@
     height: 1px;
     border: none;
   }
-
-  &__footer {
-    justify-content: flex-end;
-    width: 100%;
-  }
   &__actions {
     .add {
       background: none;
@@ -70,5 +33,50 @@
       cursor: pointer;
       color: #3066be;
     }
+  }
+  &__select {
+    width: 100%;
+    background: none;
+    border: 2px solid rgba(48, 102, 190, 0.5);
+    border-radius: 8px;
+    padding: 8px;
+    transition: all 0.2s ease-in-out;
+  }
+
+  &__reception {
+    display: flex;
+    gap: 16px;
+    width: 100%;
+    justify-content: space-between;
+    &-item {
+      display: flex;
+      &-input input {
+        background: none;
+        border: 2px solid rgba(48, 102, 190, 0.5);
+        border-radius: 8px;
+        padding: 8px;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          background: rgba(48, 102, 190, 0.02);
+          border: 2px solid rgba(48, 102, 190, 0.8);
+        }
+        &:focus {
+          border: 2px solid rgba(48, 102, 190, 1);
+          background: rgba(48, 102, 190, 0.05);
+        }
+        &:active {
+          border: 2px solid rgba(48, 102, 190, 1);
+        }
+      }
+    }
+  }
+  &__radio {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .active {
+    border: 2px solid rgba(48, 102, 190, 1);
   }
 }
