Fix services articles and style

--- a/src/components/articlesList/ArticlesList.scss
+++ b/src/components/articlesList/ArticlesList.scss
@@ -15,22 +15,22 @@
 		padding: 0;
 	}
 
-	&__button {
-		font-family: 'Raleway';
-		font-weight: 400;
-		font-size: 1.5rem;
-		border-radius: 20px;
-		color: #3066BE;
-		background: none;
-		border: 3px solid #3066BE;
-		cursor: pointer;
-		padding: 18px 32px;
-		display: block;
-		margin: 0 auto;
+	// &__button {
+	// 	font-family: 'Raleway';
+	// 	font-weight: 400;
+	// 	font-size: 1.5rem;
+	// 	border-radius: 20px;
+	// 	color: #3066BE;
+	// 	background: none;
+	// 	border: 3px solid #3066BE;
+	// 	cursor: pointer;
+	// 	padding: 18px 32px;
+	// 	display: block;
+	// 	margin: 0 auto;
 
-		&:hover {
-			background: #6D9DC5;
-			color: #FFFFFF;
-		}
-	}
+	// 	&:hover {
+	// 		background: #6D9DC5;
+	// 		color: #FFFFFF;
+	// 	}
+	// }
 }
