Fix article detailed and style

--- a/src/components/articleDetailedItem/ArticleDetailedItem.scss
+++ b/src/components/articleDetailedItem/ArticleDetailedItem.scss
@@ -1,5 +1,5 @@
 .article-detailed-item {
-	padding: 64px 110px 128px;
+	// padding: 60px 0;
 
 	&__link {
 		color: #3066BE;
@@ -14,9 +14,9 @@
 
 	&__up {
 		display: flex;
-		margin-bottom: 32px;
-		padding-bottom: 32px;
-		border-bottom: 1px solid #DADADA;
+		// margin-bottom: 32px;
+		// padding-bottom: 32px;
+		// border-bottom: 1px solid #DADADA;
 	}
 
 	&__left {
