--- a/src/components/clinicDetailedItem/ClinicDetailedItem.scss
+++ b/src/components/clinicDetailedItem/ClinicDetailedItem.scss
@@ -42,23 +42,23 @@
 		border-radius: 20px;
 	}
 
-	&__license-img{
+	&__license-img {
 		max-width: 69px;
 		max-height: 99px;
 		cursor: pointer;
 	}
 
-	&__license-img:not(:nth-child(5)){
+	&__license-img:not(:nth-child(5)) {
 		margin-right: 16px;
 	}
 
-	&__flex{
+	&__flex {
 		display: flex;
 		justify-content: space-between;
 		align-items: flex-end;
 	}
 
-	&__modal{
+	&__modal {
 		padding: 34px;
 		width: 1144px;
 		height: max-content;
@@ -76,7 +76,7 @@
 		text-transform: uppercase;
 	}
 
-	&__modal-descr {
+	&__modal-description {
 		margin: 0;
 		margin-bottom: 32px;
 		color: #000;
@@ -87,15 +87,15 @@
 		line-height: normal;
 	}
 
-	&__modal-license-img{
+	&__modal-license-img {
 		cursor: pointer;
 	}
 
-	&__modal-license-img:not(:nth-child(5n)){
+	&__modal-license-img:not(:nth-child(5n)) {
 		margin-right: 32px;
 	}
 
-	&__modal-license-img:not(:first-child):not(:nth-child(2)):not(:nth-child(3)):not(:nth-child(4)):not(:nth-child(5)){
+	&__modal-license-img:not(:first-child):not(:nth-child(2)):not(:nth-child(3)):not(:nth-child(4)):not(:nth-child(5)) {
 		margin-top: 32px;
 	}
 
