--- a/src/components/clinicDetailedItem/ClinicDetailedItem.scss
+++ b/src/components/clinicDetailedItem/ClinicDetailedItem.scss
@@ -58,6 +58,13 @@
 		align-items: flex-end;
 	}
 
+	&__modal-send-review{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		min-width: 470px;
+	}
+
 	&__modal {
 		padding: 34px;
 		width: 1144px;
