update ui component

--- a/src/components/UI/inputs/textInput/TextInput.module.scss
+++ b/src/components/UI/inputs/textInput/TextInput.module.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   gap: 4px;
   &__label {
+    position: absolute;
+    opacity: .5;
+    padding: 4px;
     font-size: 14px;
   }
   &__input {
