--- a/src/components/constructorFilter/ConstructorFilter.scss
+++ b/src/components/constructorFilter/ConstructorFilter.scss
@@ -2,6 +2,7 @@
 
     &__container {
         padding-left: 111px;
+        padding: 50px;
         z-index: 1;
         &-flex {
             display: flex;
