--- a/src/components/personalAccount/profileUser/ProfileUser.scss
+++ b/src/components/personalAccount/profileUser/ProfileUser.scss
@@ -208,6 +208,10 @@
   }
 
   &__additionally {
+    padding: 16px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -221,7 +225,6 @@
     gap: 8px;
 
     .add {
-      width: 10%;
       display: flex;
       background: none;
       border: none;
