--- a/src/components/UI/selects/cardsSelect/CardsSelect.module.scss
+++ b/src/components/UI/selects/cardsSelect/CardsSelect.module.scss
@@ -1,3 +1,12 @@
 .select {
 	width: 100%;
+	color: #3066BE;
+	padding: 5px;
+	border: 1px solid #3066BE;
+	border-radius: 12px;
+	cursor: pointer;
+
+	&:focus {
+		outline: none;
+	}
 }
