--- a/src/components/filterCards/FilterCards.scss
+++ b/src/components/filterCards/FilterCards.scss
@@ -2,6 +2,15 @@
 	display: flex;
 	margin-bottom: 30px;
 
+	&__item {
+		margin-bottom: 30px;
+	}
+
+	&__buttons {
+		display: flex;
+		gap: 30px;
+	}
+
 	&__hr {
 		border: 1px solid gray;
 		border-radius: 20px;
