--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -4,20 +4,21 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	// width: 100%;
 
 	.search_container {
 		position: relative;
 
 		input {
 			height: 50px;
-			width: 70vw;
+			width: 100%;
 			padding: 10px;
 			font-size: 16px;
 			border: 1px solid rgba(48, 102, 190, 1);
 			margin-right: 10px;
 			outline: none;
-			width: 1403px;
-			border-radius: 25.53px;
+			// width: 1400px;
+			border-radius: 26px;
 
 			&::placeholder {
 				color: rgba(109, 157, 197, 1);
@@ -34,7 +35,7 @@
 			width: 73px;
 			height: 50px;
 			position: absolute;
-			right: 10px;
+			right: 0px;
 			top: 50%;
 			background-color: transparent;
 			transform: translateY(-50%);
