--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -53,7 +53,7 @@ html {
 }
 
 .container {
-	width: 1700px;
+	width: 1500px;
 	margin: 0 auto;
 }
 
@@ -178,42 +178,50 @@ html {
 	}
 }
 
+// //* ПК
 // @media (max-width: 1920px) {
 // 	.container {
-// 		width: 1700px;
+// 		width: 1500px;
 // 	}
 // }
-// ! доделать
+
 //* ПК
-@media (max-width: 1800px) {
+@media (max-width: 1600px) {
 	.container {
-		width: 1300px;
+		width: 1400px;
 	}
 }
 
 //* ПК
 @media (max-width: 1440px) {
 	.container {
-		width: 1000px;
+		width: 1200px;
+	}
+}
+
+//* ПК
+@media (max-width: 1280px) {
+	.container {
+		width: 900px;
 	}
 }
 
 //* Планшет
-@media (max-width: 1120px) {
+@media (max-width: 1024px) {
 	.container {
-		width: 800px;
+		width: 720px;
 	}
 }
 
 //* Планшет
-@media (max-width: 920px) {
+@media (max-width: 768px) {
 	.container {
-		width: 600px;
+		width: 100%;
 	}
 }
 
 //* Телефон
-@media (max-width: 720px) {
+@media (max-width: 360px) {
 	.container {
 		width: 100%;
 	}
