Add new header for mobile and adaptive for header, footer, articles

--- a/src/components/articlesItem/ArticlesItem.scss
+++ b/src/components/articlesItem/ArticlesItem.scss
@@ -63,3 +63,19 @@
 		text-decoration: none;
 	}
 }
+
+//* ПК
+@media (max-width: 1280px) {
+	.articles-item {
+		width: 48%;
+		margin-bottom: 30px;
+	}
+}
+
+//* Планшет
+@media (max-width: 768px) {
+	.articles-item {
+		width: 100%;
+		margin-bottom: 10px;
+	}
+}
