--- a/src/components/personalAccount/cardsItem/CardsItem.scss
+++ b/src/components/personalAccount/cardsItem/CardsItem.scss
@@ -11,7 +11,7 @@
     padding: 8px;
     width: 100%;
     height: 100%;
-    max-width: 180px;
+    max-width: 200px;
     max-height: 250px;
     gap: 8px;
     border-radius: 8px;
@@ -25,8 +25,8 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    max-width: 146px;
-    max-height: 146px;
+    max-width: 150px;
+    max-height: 150px;
     // border: 1px solid rgba(0, 0, 0, 0.05);
     border-radius: 8px;
     overflow: hidden;
@@ -58,5 +58,10 @@
       border-radius: 4px;
       background: rgba(48, 102, 190, 0.1);
     }
+  }
+}
+@media (max-width: 375px) {
+  .card {
+    align-items: center;
   }
 }
