--- a/src/components/personalAccount/settingsInfo/SettingsInfo.scss
+++ b/src/components/personalAccount/settingsInfo/SettingsInfo.scss
@@ -1,159 +1,171 @@
 .settings {
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 
-    &__wrapper {
-        display: flex;
-        flex-direction: column;
-    }
+  &__title {
+    margin: 0;
+    font-size: var(--title-font-size);
+    font-weight: 700;
+    margin-bottom: 16px;
+  }
 
-    &__title {
-        margin: 0;
-        font-size: var(--title-font-size);
-        font-weight: 700;
-        margin-bottom: 16px;
-    }
+  &__notice {
+    margin-bottom: 16px;
+    border-bottom: 1px solid #dadada;
+  }
 
-    &__notice {
-        margin-bottom: 16px;
-        border-bottom: 1px solid #DADADA;
+  &__password {
+    max-width: 350px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    input {
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px solid #87cdd1;
+      margin-bottom: 16px;
     }
+    @media (max-width: 720px) {
+      max-width: 400px;
+    }
+  }
 
-    &__password {
-        width: 350px;
-        display: flex;
-        flex-direction: column;
-        input {
-            padding: 8px;
-            border-radius: 8px;
-            border: 1px solid #87CDD1;
-            margin-bottom: 16px
-        }
-    }
-
-    &__control {
-    }
+  &__control {
+  }
 }
 .notice {
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    &__item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+  &__text {
+    margin-bottom: 16px;
+  }
+
+  &__title {
+    margin: 0;
+    color: #000;
+    font-family: Raleway;
+    font-size: var(--title-font-size);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__description {
+    margin: 0;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: Raleway;
+    font-size: var(--description-font-size);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__checkbox {
+    position: relative;
+    display: inline-block;
+    width: 64px;
+    height: 32px;
+  }
+
+  &__input {
+    display: none;
+  }
+
+  &__slider {
+    min-width: 64px;
+    min-height: 32px;
+    min-width: 64px;
+    padding: 2px;
+    display: inline-flex;
+    align-items: center;
+    position: absolute;
+    cursor: pointer;
+    background-color: #ffffff;
+    border: 2px solid #3066be;
+    border-radius: var(--CornerRadius-r8, 8px);
+    transition: 0.4s;
+
+    &:before {
+      display: inline-flex;
+      position: absolute;
+      content: "";
+      height: 24px;
+      width: 24px;
+      background: var(--pallet-color-11005, #fff);
+      border-radius: 4px;
+      box-shadow: 0px 0px 4px 0px rgba(48, 102, 190, 0.5);
+      transition: 0.4s;
     }
+  }
 
-    &__text {
-        margin-bottom: 16px;
+  &__input:checked + &__slider {
+    background-color: #3066be;
+    border: 2px solid #3066be;
+    box-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.25);
+
+    &:before {
+      transform: translateX(32px);
     }
+  }
 
-    &__title {
-        margin: 0;
-        color: #000;
-        font-family: Raleway;
-        font-size: var(--title-font-size);
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-    }
-
+  @media (max-width: 720px) {
     &__description {
-        margin: 0;
-        color: rgba(0, 0, 0, 0.50);
-        font-family: Raleway;
-        font-size: var(--description-font-size);
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+      display: none;
     }
-
-    &__checkbox {
-        position: relative;
-        display: inline-block;
-        width: 64px;
-        height: 32px;
-    }
-
-    &__input {
-        display: none;
-    }
-
-    &__slider {
-        min-width: 64px;
-        min-height: 32px;
-        min-width: 64px;
-        padding: 2px;
-        display: inline-flex;
-        align-items: center;
-        position: absolute;
-        cursor: pointer;
-        background-color: #ffffff;
-        border: 2px solid #3066BE;
-        border-radius: var(--CornerRadius-r8, 8px);
-        transition: 0.4s;
-  
-        &:before {
-            display: inline-flex;
-            position: absolute;
-            content: "";
-            height: 24px;
-            width: 24px;
-            background: var(--pallet-color-11005, #FFF);
-            border-radius: 4px;
-            box-shadow: 0px 0px 4px 0px rgba(48, 102, 190, 0.50);
-            transition: 0.4s;
-        }
-    }
-
-    &__input:checked + &__slider {
-        background-color: #3066BE;
-        border: 2px solid #3066BE;
-        box-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.25);
-  
-        &:before {
-            transform: translateX(32px);
-        }
-    }
+  }
 }
 
 .control {
-    &__date {
-        margin: 0;
-        margin-bottom: 32px;
-        color: rgba(0, 0, 0, 0.50);
-        font-family: Raleway;
-        font-size: var(--description-font-size);
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-    }
+  &__date {
+    margin: 0;
+    margin-bottom: 32px;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: Raleway;
+    font-size: var(--description-font-size);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 
-    &__buttons {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        gap: 16px;
-    }
+  &__buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 16px;
+  }
 
-    &__button {
-        display: flex;
-        padding: 16px;
-        width: 20%;
-        justify-content: center;
-        align-items: center;
-        background-color: transparent;
-        border: none;
-        border-radius: 8px;
-        outline: 2px solid #3066BE;
-        cursor: pointer;
-    }
+  &__button {
+    display: flex;
+    padding: 16px;
+    max-width: 200px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    border-radius: 8px;
+    outline: 2px solid #3066be;
+    cursor: pointer;
 
-    &__button:first-child {
-        color: #3066BE;
-        font-size: var(--title-font-size);
+    @media (max-width: 720px) {
+      max-width: 400px;
     }
+  }
 
-    &__button:last-child {
-        color: #FD5050;
-        font-family: Raleway;
-        font-size: var(--title-font-size);
-    }
+  &__button:first-child {
+    color: #3066be;
+    font-size: var(--title-font-size);
+  }
+
+  &__button:last-child {
+    color: #fd5050;
+    font-family: Raleway;
+    font-size: var(--title-font-size);
+  }
 }
-  
