--- a/src/components/personalAccount/supportInfo/SupportInfo.scss
+++ b/src/components/personalAccount/supportInfo/SupportInfo.scss
@@ -41,18 +41,6 @@
         color: black;
       }
     }
-    // &-email{
-    // }
-    // &-link {
-    // }
-    // &-request {
-    // }
-    // &-details {
-    // }
-    // &-description {
-    // }
-    // &-status {
-    // }
   }
   &__button {
     display: flex;
@@ -72,17 +60,26 @@
       background: none;
     }
     &-upload {
-        color: #3066BE;
-    } 
-    input[type=file]::file-selector-button {
-        border-radius: 4px;
-        border: 2px solid #3066be;
-        color: #3066BE;
-        background: none;
+      color: #3066be;
+    }
+    input[type="file"]::file-selector-button {
+      border-radius: 4px;
+      border: 2px solid #3066be;
+      color: #3066be;
+      background: none;
     }
     &-send {
-        color: white;
-        background: #3066BE;
+      color: white;
+      background: #3066be;
     }
+  }
+}
+
+@media (max-width: 720px) {
+  .support__button-send {
+    width: 100%;
+  }
+  .support__button-upload {
+    width: 100%;
   }
 }
