--- a/src/components/enterClient/EnterClient.scss
+++ b/src/components/enterClient/EnterClient.scss
@@ -1,82 +1,92 @@
 .enter {
-
-    &__client {
-        display: flex;
-        max-width: 500px;
-        flex-direction: column;
-        gap: var(--corner-radius-r-16, 16px);
-    }
+  &__client {
+    display: flex;
+    flex-direction: column;
+    gap: var(--corner-radius-r-16, 16px);
+  }
 }
 .client {
+  &__link {
+    max-width: max-content;
+    align-items: flex-start;
+    text-decoration: none;
+    color: #3066be;
+    font-family: Raleway;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
 
-    &__link {
-        max-width: max-content;
-        align-items: flex-start;
-        text-decoration: none;
-        color: #3066BE;
-        font-family: Raleway;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-    }
-
-    &__form {
-        display: flex;
-        max-width: 500px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: var(--corner-radius-r-16, 16px);
-    }
+  &__form {
+    max-width: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: var(--corner-radius-r-16, 16px);
+  }
 }
 .form {
+  &__box {
+    display: flex;
+    flex-direction: column;
+  }
 
-    &__box {
-        display: flex;
-        flex-direction: column;
+  &__link {
+    text-decoration: none;
+    color: #3066be;
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__approval {
+    margin: 0;
+    color: #3066be;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  &__register {
+    color: #3066be;
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration: none;
+  }
+
+  &__input,
+  &__button {
+    min-width: 0;
+    width: 500px;
+
+    @media (max-width: 430px) {
+      width: 400px;
     }
 
-    &__link {
-        text-decoration: none;
-        color: #3066BE;
-        font-family: Raleway;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+    @media (max-width: 375px) {
+      width: 350px;
     }
-
-    &__approval {
-        margin: 0;
-        color: #3066BE;
-        text-align: center;
-        font-family: Raleway;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-    }
-
-    &__register {
-        color: #3066BE;
-        font-family: Raleway;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        text-decoration: none;
-    }
+  }
 }
 
 .approval {
-    &__link {
-        color: #3066BE;
-        font-family: Raleway;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        text-decoration-line: underline;
-    }
+  &__link {
+    color: #3066be;
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+  }
 }
