Add adaptive for section. Fix UI and bugs

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -52,6 +52,10 @@ html {
 	box-sizing: border-box;
 }
 
+.section {
+	padding: 60px 0;
+}
+
 .container {
 	width: 1500px;
 	margin: 0 auto;
@@ -197,6 +201,10 @@ html {
 	.container {
 		width: 1200px;
 	}
+
+	.section {
+		padding: 30px 0;
+	}
 }
 
 //* ПК
@@ -210,6 +218,10 @@ html {
 @media (max-width: 1024px) {
 	.container {
 		width: 720px;
+	}
+
+	.section {
+		padding: 10px 0;
 	}
 }
 
