--- a/src/components/myCarousel/slides/Slides.scss
+++ b/src/components/myCarousel/slides/Slides.scss
@@ -1,9 +1,11 @@
 /* Стили для карусели */
 .slide {
 	width: 100vw;
-	height: 648px;
+	height: 80vh;
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position-x: right; 
+    background-position-y: center;
 
 	&__container {
 		margin-top: 8%;
@@ -12,7 +14,6 @@
 	&__info {
 		position: relative;
 		top: 20%;
-		// margin-left: 15%;
 		width: calc(42% - 20px);
 		height: 141px;
 
@@ -42,15 +43,13 @@
 .AI-text {
 	position: relative;
 	top: 19%;
-	// margin-left: 15%;
 	width: calc(35% - 20px);
-	// height: 60px;
 
 
 	p {
 		width: 100%;
 		font-family: Roboto;
-		font-size: 26px;
+		font-size: 1.625rem;
 		font-weight: 400;
 		line-height: 31px;
 		letter-spacing: 0em;
@@ -64,17 +63,16 @@
 .button-item {
 	position: relative;
 	top: 30%;
-	// margin-left: 15%;
 	min-width: auto;
 	background: #FFFFFF;
 	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 	border-radius: 30px;
 	transition: .3s;
-	display: inline-block; // Разместить кнопку в строчном блоке, чтобы подстраивалась под размер текста
+	display: inline-block;
 	text-decoration: none;
 
 	p {
-		margin: 15px; // Подстраивайте отступы под ваши требования
+		margin: 15px;
 		font-family: 'Raleway';
 		font-style: normal;
 		font-weight: 700;
@@ -88,4 +86,133 @@
 	&:hover {
 		background: #c9c8c8;
 	}
+}
+@media screen and (max-width: 768px) {
+    .slide {
+        background-position-x: calc(100% + 350px);
+    }
+}
+//* ПК
+@media (max-width: 1600px) {
+	.slide {
+        background-position-x: calc(100% + 350px);
+    }
+}
+
+//* ПК
+@media (max-width: 1440px) {
+	.slide {
+        background-position-x: calc(100% + 350px);
+    }
+}
+
+//* ПК
+@media (max-width: 1280px) {
+	.slide {
+        background-position-x: calc(100% + 350px);
+    }
+}
+
+//* Планшет
+@media (max-width: 1024px) {
+	.slide {
+        background-position-x: calc(100% + 350px);
+		&__container {
+			margin-top: 13%;
+		}
+
+		&__info{
+			position: relative;
+			top: 40%;
+			width: calc(42% - 10px);
+			height: 141px;
+		}
+    }
+}
+
+//* Планшет
+@media (max-width: 768px) {
+	.slide {
+		display: flex;
+		align-items: flex-end;
+        background-position-x: calc(100% + 250px);
+		&__container {
+
+			display: flex;
+			flex-direction: column;
+    		align-items: center;
+			margin-left: 2%;
+			margin-bottom: 4%;
+		}
+			&__info {
+				position: relative;
+				width: 100%;
+				height: auto;
+		
+				&::after {
+					content: "";
+					display: none;
+				}
+		
+				p {
+					font-size: 1.6rem;
+					margin: 0;
+					line-height: 42px;
+					color: rgb(255, 255, 255);
+				
+				}
+		}
+	}
+	.AI-text {
+		width: 100%;
+		p {
+			font-size: 1.5rem;
+			color: rgb(255, 255, 255);
+		}
+	}
+	.button-item {
+	
+		p {
+			margin: 13px;
+			font-size: 1.1rem;
+		}
+	}
+}
+
+//* Телефон
+@media (max-width: 360px) {
+	.slide {
+        background-position-x: calc(100% + 340px);
+		&__container {
+		}
+			&__info {		
+				p {
+					font-size: 1.2rem;
+					line-height: 20px;
+				
+				}
+		}
+	}
+	.AI-text {
+		width: 100%;
+		p {
+			font-size: 1.1rem;
+			line-height: 20px;
+			color: rgb(255, 255, 255);
+		}
+	}
+	.button-item {
+	
+		p {
+			margin: 11px;
+			font-size: 0.9rem;
+		}
+	}
+}
+
+//* Телефон
+@media (max-width: 320px) {
+	.slide {
+        background-position-x: calc(100% + 340px);
+    }
 }
