--- a/src/components/headerMobile/HeaderMobile.scss
+++ b/src/components/headerMobile/HeaderMobile.scss
@@ -22,23 +22,99 @@
 		height: auto;
 		position: absolute;
 		z-index: 2;
-		border: 1px solid #3066BE;
+		// border: 1px solid #3066BE;
 		border-left: 0;
 	}
 
 	&__list {
 		padding-left: 0;
+		margin: 0 20px 0 20px;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		align-items: right;
 	}
 
 	&__link {
 		list-style-type: none;
+		margin: 10px;
 	}
 
 	&__a {
 		text-decoration: none;
-		color: black;
+		font-family: 'Raleway';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 19px;
+		display: flex;
+		align-items: center;
+		color: #3066BE;
+	}
+	span{
+		text-decoration: none;
+		color: #3066BE;
+		font-family: 'Raleway';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+	}
+
+	&__services-menu{
+		text-decoration: none;
+		color: #3066BE;
+		font-family: 'Raleway';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+		ul{
+			text-decoration: none;
+			list-style-type: none;
+			padding: 0;
+		}
+	}
+	&__services-list{
+		&__li{
+			margin: 10px 0 10px 0 ;
+			a{
+			text-decoration: none;
+			list-style-type: none;
+			padding: 0;
+			color: #3066BE;
+			font-family: 'Raleway';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 16px;
+			}
+		}
+	}
+	&__sub-menu{
+		li{
+			margin-top: 5px;
+		}
+	}
+	
+	// &__h2{
+	// 	text-decoration: none;
+	// 	color: #3066BE;
+	// 	font-family: 'Raleway';
+	// 	font-style: normal;
+	// 	font-weight: 400;
+	// 	font-size: 16px;
+	// }
+	
+	&__button-item{
+		text-decoration: none;
+		color: #3066BE;
+		font-family: 'Raleway';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+		&::after{
+			content: "";
+			display: block;
+			width: 90%;
+			height: 1px;
+			background: #5985CB;
+		}
 	}
 }
