--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -91,7 +91,7 @@
       }
 
       &__li {
-        height: 5vh;
+        height: auto;
         width: 26vw;
         padding: 8px 15px;
         cursor: pointer;
