--- a/src/components/personalAccount/servicesInfo/ServicesInfo.scss
+++ b/src/components/personalAccount/servicesInfo/ServicesInfo.scss
@@ -80,3 +80,9 @@
     border: 2px solid rgba(48, 102, 190, 1);
   }
 }
+
+@media (max-width: 600px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
