--- a/src/components/UI/cards/employeeСard/EmployeeСard.module.scss
+++ b/src/components/UI/cards/employeeСard/EmployeeСard.module.scss
@@ -2,13 +2,13 @@
   display: flex;
   gap: 16px;
 
-  border: 1px solid rgba($color: #3066be, $alpha: .5);
+  border: 1px solid rgba($color: #3066be, $alpha: 0.5);
   border-radius: 8px;
   padding: 16px;
   // cursor: grab;
 
-  transition: border .2s;
-  
+  transition: border 0.2s;
+
   &:hover {
     border: 1px solid rgba($color: #3066be, $alpha: 1); // TODO: Сделать нормальный hover
   }
@@ -27,15 +27,27 @@
 
   &__info {
     display: flex;
+    gap: 8px;
     width: 100%;
     flex-direction: column;
     justify-content: space-between;
   }
 
   &__tags {
-    display: flex; 
+    display: flex;
     flex-wrap: wrap;
     gap: 4px;
   }
 
+  &__buttons {
+    display: flex;
+    gap: 8px;
+  }
+}
+
+@media (max-width: 390px) {
+  .employee {
+    flex-direction: column;
+    align-items: center;
+  }
 }
