--- a/src/components/personalAccount/specialistInfo/SpecialistInfo.scss
+++ b/src/components/personalAccount/specialistInfo/SpecialistInfo.scss
@@ -14,15 +14,21 @@
     width: 100%;
     flex: 1 0 auto;
   }
-  
+
   &__tools {
     display: flex;
     gap: 16px;
   }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 960px) and (max-width: 1440px) {
   .specialist__cards {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width:960px)  {
+  .specialist__cards {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
