--- a/src/components/personalAccount/editUser/EditUser.scss
+++ b/src/components/personalAccount/editUser/EditUser.scss
@@ -41,7 +41,7 @@
       font-size: 16px;
     }
   }
-  &__action-button {
+  &__actions {
     display: flex;
     flex-direction: column;
     gap: 16px;
