--- a/src/components/personalAccount/profileUser/ProfileUser.scss
+++ b/src/components/personalAccount/profileUser/ProfileUser.scss
@@ -211,7 +211,7 @@
     border: 1px solid #3066be;
   }
 
-  &__action-button {
+  &__actions {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
