--- a/src/components/personalAccount/editUser/EditUser.scss
+++ b/src/components/personalAccount/editUser/EditUser.scss
@@ -10,11 +10,13 @@
 
   &__info {
     display: flex;
-    width: auto;
-    align-items: flex-start;
-    align-content: flex-start;
-    gap: 16px var(--CornerRadius-r16, 16px);
     flex-wrap: wrap;
+    gap: 16px;
+  }
+
+  &__input,
+  &__select {
+    flex: 1 1 25%;
   }
 
   &__checkbox {
@@ -63,10 +65,11 @@
     font-size: 12px;
   }
 
-  &__input, &__select {
+  &__input,
+  &__select {
     @media (max-width: 430px) {
+      flex: 100%;
       width: 100%;
     }
   }
-
 }
