--- a/src/components/personalAccount/profileUser/ProfileUser.scss
+++ b/src/components/personalAccount/profileUser/ProfileUser.scss
@@ -34,18 +34,10 @@
     min-width: 150px;
     min-height: 150px;
     border-radius: 8px;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.2s;
 
     &:hover {
       opacity: 0.5;
-
-      &::before {
-        content: "📷";
-        position: absolute;
-        color: #ffffff;
-        font-size: 24px;
-        opacity: 1;
-      }
     }
 
     &-label {
@@ -143,15 +135,6 @@
         display: none;
       }
     }
-  }
-
-  &__divider {
-    width: 100%;
-    margin: 0;
-    background: #5985cb;
-    opacity: 0.1;
-    height: 1px;
-    border: none;
   }
 
   // &__main {
