--- a/src/components/personalAccount/profileUser/ProfileUser.scss
+++ b/src/components/personalAccount/profileUser/ProfileUser.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   gap: 16px;
 
+  &__input {
+    width: 100%;
+  }
+
   &__header {
     display: flex;
     flex-direction: row;
@@ -201,33 +205,22 @@
     gap: 16px;
 
     .save {
-      background: none;
       border: none;
-      cursor: pointer;
-      color: #3066be;
     }
 
     .cancel {
-      background: none;
       border: none;
-      color: black;
-      opacity: 25%;
-      cursor: pointer;
+      opacity: 0.5;
     }
 
     .edit {
-      background: none;
       border: none;
-      cursor: pointer;
-      color: #3066be;
     }
 
     .delete {
-      background: none;
       border: none;
-      color: black;
-      opacity: 25%;
-      cursor: pointer;
+      color: rgb(206, 44, 49);
+      opacity: 0.5;
     }
   }
 
@@ -239,30 +232,5 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-  }
-  &__licenses,
-  &__education,
-  &__qualification,
-  &__experience {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-
-    .add {
-      display: flex;
-      background: none;
-      border: none;
-      cursor: pointer;
-      color: #3066be;
-    }
-  }
-
-  .inDev {
-    filter: blur(1px);
-    background: #f2f2f2;
-    opacity: 0.5;
-    border-radius: 8px;
-    padding: 8px;
-    pointer-events: none;
   }
 }
